Appears to properly generate trees now.

--- a/cfg/default.cfg
+++ b/cfg/default.cfg
@@ -3,16 +3,17 @@
 seed:
 
 #Sequence Length: number of times to pit each agent against the other
-l:5
+l:20
 
 #Runs: Number of times we run our EA
 runs:30
 
 [agent]
 #Memory: how sequences back we remember
-k:10
+#To avoid as much noise as possible, k << l
+k:4
 
-#Maximum: Tree Debth
+#Maximum: Tree Depth
 d:5
 
 [init]
