Added a probability to grow to allow more flushed out trees.

--- a/cfg/default.cfg
+++ b/cfg/default.cfg
@@ -20,5 +20,10 @@ d:5
 #Method, either grow or full (currently only grow)
 method:grow
 
+#Grow:
+#  Probability of placing a terminal vs placing a node
+#  .50 results in the generic grow, anything else can allow us to get a more flushed out tree
+prob:.25
+
 #Opponent 2 csv
 op2:opponent1.csv
