Parse tree properly parses after a bit of bug fixing. Looks good for now.

--- a/cfg/default.cfg
+++ b/cfg/default.cfg
@@ -8,6 +8,10 @@ l:20
 #Runs: Number of times we run our EA
 runs:30
 
+#Oppenent types, either "0" for always last winning or "opponent1.csv" 
+#or whatever the file name is for the other
+opp:0
+
 [agent]
 #Memory: how sequences back we remember
 #To avoid as much noise as possible, k << l
@@ -17,13 +21,10 @@ k:4
 d:5
 
 [init]
-#Method, either grow or full (currently only grow)
-method:grow
+#Method, either grow or full
+method:full
 
 #Grow:
 #  Probability of placing a terminal vs placing a node
 #  .50 results in the generic grow, anything else can allow us to get a more flushed out tree
 prob:.25
-
-#Opponent 2 csv
-op2:opponent1.csv
