Finished the competition part, can now read in the CSV opponent too. Appears to all work well.

--- a/cfg/default.cfg
+++ b/cfg/default.cfg
@@ -10,11 +10,12 @@ runs:30
 
 #Oppenent types, either "0" for always last winning or "opponent1.csv" 
 #or whatever the file name is for the other
-opp:0
+opp:opponent1.csv
 
 [agent]
 #Memory: how sequences back we remember
 #To avoid as much noise as possible, k << l
+#However, k must be > 4 (or whatever the CSV uses) due to design issues
 k:4
 
 #Maximum: Tree Depth
