Added fitness evaluation limit. Also implemented fitness calculation and a custom payoff matrix.

--- a/cfg/default.cfg
+++ b/cfg/default.cfg
@@ -3,10 +3,13 @@
 seed:
 
 #Sequence Length: number of times to pit each agent against the other
-l:20
+l:10
 
 #Runs: Number of times we run our EA
 runs:30
+
+#Number of fit evals per run
+fitevals:1000
 
 #Oppenent types, either "0" for always last winning or "opponent1.csv" 
 #or whatever the file name is for the other
@@ -20,6 +23,15 @@ k:4
 
 #Maximum: Tree Depth
 d:5
+
+#Payoff matrix. This is tauritz's table from left to right, top to bottom
+#scissors => s
+#rock => r
+#paper => p
+#Normalized to [0,1]
+#opponentplayer => res value
+#rr,rp,rs,pr,pp,ps,sr,sp,ss
+payoff:0.5,1,0,0,0.5,1,1,0,0.5
 
 [init]
 #Method, either grow or full
