Logging is fully implemented. Also added serialization for agent.

--- a/cfg/default.cfg
+++ b/cfg/default.cfg
@@ -3,13 +3,13 @@
 seed:
 
 #Sequence Length: number of times to pit each agent against the other
-l:10
+l:20
 
 #Runs: Number of times we run our EA
-runs:30
+runs:3
 
 #Number of fit evals per run
-fitevals:1000
+fitevals:500
 
 #Oppenent types, either "0" for always last winning or "opponent1.csv" 
 #or whatever the file name is for the other
@@ -41,3 +41,15 @@ method:full
 #  Probability of placing a terminal vs placing a node
 #  .50 results in the generic grow, anything else can allow us to get a more flushed out tree
 prob:.25
+
+[log]
+#Acceptable variables:
+#  %bf => best fitness
+#  %cm => commit
+#  %cfg => config file name
+#Log filename, relative or absolute
+result:logs/result-log.txt
+#Where we pump out the solution
+solution:logs/soution-log.txt
+#Log headers, do we try to query git (1) or not (0)?
+logh:1
