Fixed a bug with reading the CSV and its strategy. It wasn't pattern matching the number string correctly and was including the "resulting move" in the history search.

--- a/cfg/default.cfg
+++ b/cfg/default.cfg
@@ -11,9 +11,10 @@ runs:3
 #Number of fit evals per run
 fitevals:500
 
-#Oppenent types, either "0" for always last winning or "opponent1.csv" 
+#Oppenent types, either 0 for always last winning or "opponent1.csv" 
 #or whatever the file name is for the other
 opp:opponent1.csv
+#opp:0
 
 [agent]
 #Memory: how sequences back we remember
