--- a/cfg/as2a-csv.cfg
+++ b/cfg/as2a-csv.cfg
@@ -3,27 +3,26 @@
 seed:
 
 #Sequence Length: number of times to pit each agent against the other
-l:20
+l:50
 
 #Runs: Number of times we run our EA
-runs:1
+runs:30
 
 #Number of fit evals per run
 fitevals:1000
 
 #Oppenent types, either 0 for always last winning or "opponent1.csv" 
 #or whatever the file name is for the other
-#opp:opponent1.csv
-opp:0
+opp:opponent1.csv
 
 [agent]
 #Memory: how sequences back we remember
 #To avoid as much noise as possible, k << l
 #However, k must be > 4 (or whatever the CSV uses) due to design issues
-k:4
+k:8
 
 #Maximum: Tree Depth
-d:4
+d:5
 
 #Payoff matrix. This is tauritz's table from left to right, top to bottom
 #scissors => s
@@ -49,8 +48,8 @@ prob:.25
 #  %cm => commit
 #  %cfg => config file name
 #Log filename, relative or absolute
-result:logs/result-log.txt
+result:logs/csv-result.txt
 #Where we pump out the solution
-solution:logs/soution-log.txt
+solution:logs/csv-solution.txt
 #Log headers, do we try to query git (1) or not (0)?
 logh:1
