Bugfix with arbitrarily-sized k in my gp vs k=4 on the csv.

--- a/cfg/as2a-lastwinner.cfg
+++ b/cfg/as2a-lastwinner.cfg
@@ -12,7 +12,7 @@ runs:30
 fitevals:1000
 
 #Oppenent types, either 0 for always last winning or "opponent1.csv" 
-#or whatever the file name is for the other
+#or whatever the file name is for the custom ai
 opp:0
 
 [agent]
