--- a/cfg/default.cfg
+++ b/cfg/default.cfg
@@ -12,9 +12,9 @@ runs:1
 fitevals:1000
 
 #Oppenent types, either 0 for always last winning or "opponent1.csv" 
-#or whatever the file name is for the other
-#opp:opponent1.csv
-opp:0
+#or whatever the file name is for the custom ai
+opp:opponent1.csv
+#opp:0
 
 [agent]
 #Memory: how sequences back we remember
