--- a/cfg/default.cfg
+++ b/cfg/default.cfg
@@ -19,11 +19,13 @@ opp:opponent1.csv
 [agent]
 #Memory: how sequences back we remember
 #To avoid as much noise as possible, k << l
-#However, k must be > 4 (or whatever the CSV uses) due to design issues
+#< 4 runs into issues with the opponent
 k:4
 
+
 #Maximum: Tree Depth
-d:4
+#Should be > 4
+d:3
 
 #Payoff matrix. This is tauritz's table from left to right, top to bottom
 #scissors => s
