Changed to 2b, did some minor variable name changes and organized the init section properly / fixed grow. Added halfandhalf init.
Full:
  Init:
    * Added new class file node.py and moved the node class from agent.py
    * Removed probability-based growing, it's all 50%.
    * Added halfandhalf and fixed grow.
    * Changed several functions to accept a method parameter for halfandhalf support.
  Overall:
    * Changed assignment versions from 2a to 2b.
    * Changed many variable names to more verbose ones to appease graders.
    * Comment cleanup.

--- a/cfg/default.cfg
+++ b/cfg/default.cfg
@@ -25,7 +25,7 @@ k:4
 
 #Maximum: Tree Depth
 #Should be > 4
-d:3
+d:8
 
 #Payoff matrix. This is tauritz's table from left to right, top to bottom
 #scissors => s
@@ -37,13 +37,8 @@ d:3
 payoff:0.5,1,0,0,0.5,1,1,0,0.5
 
 [init]
-#Method, either grow or full
-method:full
-
-#Grow:
-#  Probability of placing a terminal vs placing a node
-#  .50 results in the generic grow, anything else can allow us to get a more flushed out tree
-prob:.25
+#Method, either grown, halfandhalf or full
+method:halfandhalf
 
 [log]
 #Acceptable variables:
