Now enforcing the l >= 3*k limit.

--- a/cfg/default.cfg
+++ b/cfg/default.cfg
@@ -3,7 +3,8 @@
 seed:
 
 #Sequence Length: number of times to pit each agent against the other
-l:20
+#l >= 3k (memory) or will be set to 3k
+l:30
 
 #Runs: Number of times we run our EA
 runs:1
@@ -25,7 +26,7 @@ k:4
 
 #Maximum: Tree Depth
 #Should be > 4
-d:8
+d:7
 
 #Payoff matrix. This is tauritz's table from left to right, top to bottom
 #scissors => s
