Restructured run. Added initalization with print messages.

--- a/cfg/default.cfg
+++ b/cfg/default.cfg
@@ -23,7 +23,6 @@ opp:opponent1.csv
 #< 4 runs into issues with the opponent
 k:4
 
-
 #Maximum: Tree Depth
 #Should be > 4
 d:7
@@ -32,14 +31,37 @@ d:7
 #scissors => s
 #rock => r
 #paper => p
-#Normalized to [0,1]
+#Normalized to [0,1], -3 => 0, 1 => .8, 2 => 1
 #opponentplayer => res value
 #rr,rp,rs,pr,pp,ps,sr,sp,ss
-payoff:0.5,1,0,0,0.5,1,1,0,0.5
+payoff:.8,1,0,0,0.8,1,1,0,0.8
+
+[gen]
+#mu, pop size
+mu:500
+#lambda, offspring per gen
+lamb:50
 
 [init]
 #Method, either grown, halfandhalf or full
 method:halfandhalf
+
+[parentselection]
+#Type of selection
+#0 => Fitness Proportional
+#1 => Over-selection
+type:0
+
+#[mutation]
+
+[survivalselection]
+#Type of selection
+#0 => Truncation
+#2 => k-tournament
+type:0
+
+#k-tournament size
+k:20
 
 [log]
 #Acceptable variables:
