Simple implementation of parsimony pressure.

--- a/cfg/default.cfg
+++ b/cfg/default.cfg
@@ -36,6 +36,11 @@ d:7
 #rr,rp,rs,pr,pp,ps,sr,sp,ss
 payoff:.8,1,0,0,0.8,1,1,0,0.8
 
+#Parsimony pressure coefficent
+#( depth - agent->d )* ppcoeff, if depth > d.
+#  This amount is subtracted from the fitness
+ppcoeff:0.01
+
 [gen]
 #mu, pop size
 mu:500
