--- a/cfg/default.cfg
+++ b/cfg/default.cfg
@@ -57,7 +57,10 @@ method:halfandhalf
 #1 => Over-selection
 type:1
 
-#[mutation]
+[mutation]
+#Mutation rate chance
+chance:0.02
+
 
 [survivalselection]
 #Type of selection
