--- a/cfg/default.cfg
+++ b/cfg/default.cfg
@@ -9,9 +9,6 @@ l:30
 #Runs: Number of times we run our EA
 runs:1
 
-#Number of fit evals per run
-fitevals:10000
-
 #Oppenent types, either 0 for always last winning or "opponent1.csv" 
 #or whatever the file name is for the custom ai
 opp:opponent1.csv
@@ -61,7 +58,6 @@ type:1
 #Mutation rate chance
 chance:0.02
 
-
 [survivalselection]
 #Type of selection
 #0 => Truncation
@@ -70,6 +66,18 @@ type:2
 
 #k-tournament size
 k:20
+
+[terminate]
+#Termination Type
+#0 => # of Fit Evals
+#1 => no fitness change for j turns
+type:1
+
+#Number of fit evals per run
+fitevals:10000
+
+#number of generations without avg fitness improvement
+j:30
 
 [log]
 #Acceptable variables:
