Fixed some logging stuff.

--- a/cfg/default.cfg
+++ b/cfg/default.cfg
@@ -1,6 +1,6 @@
 [main]
 #Seed: What we initialize our RNG with. Blank starts randomly
-seed:
+seed:1213
 
 #Sequence Length: number of times to pit each agent against the other
 #l >= 3k (memory) or will be set to 3k
@@ -71,10 +71,10 @@ k:20
 #Termination Type
 #0 => # of Fit Evals
 #1 => no fitness change for j turns
-type:1
+type:0
 
 #Number of fit evals per run
-fitevals:10000
+fitevals:5000
 
 #number of generations without avg fitness improvement
 j:30
