--- a/cfg/default.cfg
+++ b/cfg/default.cfg
@@ -7,7 +7,7 @@ seed:1213
 l:30
 
 #Runs: Number of times we run our EA
-runs:1
+runs:5
 
 #Oppenent types, either 0 for always last winning or "opponent1.csv" 
 #or whatever the file name is for the custom ai
@@ -34,15 +34,15 @@ d:7
 payoff:.8,1,0,0,0.8,1,1,0,0.8
 
 #Parsimony pressure coefficent
-#( depth - agent->d )* ppcoeff, if depth > d.
+#( maxdepth - agent->d )* ppcoeff, if depth > d.
 #  This amount is subtracted from the fitness
 ppcoeff:0.01
 
 [gen]
 #mu, pop size
-mu:500
+mu:1000
 #lambda, offspring per gen
-lamb:50
+lamb:100
 
 [init]
 #Method, either grown, halfandhalf or full
@@ -56,7 +56,7 @@ type:1
 
 [mutation]
 #Mutation rate chance
-chance:0.02
+chance:0.01
 
 [survivalselection]
 #Type of selection
@@ -74,7 +74,7 @@ k:20
 type:0
 
 #Number of fit evals per run
-fitevals:5000
+fitevals:10000
 
 #number of generations without avg fitness improvement
 j:30
