Some log formatting, more information, GUI formatting, and a few minor tweaks.

--- a/cfg/default.cfg
+++ b/cfg/default.cfg
@@ -87,6 +87,6 @@ j:30
 #Log filename, relative or absolute
 result:logs/result-log.txt
 #Where we pump out the solution
-solution:logs/soution-log.txt
+solution:logs/solution-log.txt
 #Log headers, do we try to query git (1) or not (0)?
 logh:1
