Fixed last winner, no longer passing a useless variable to run since it's cached infunction.

--- a/cfg/default.cfg
+++ b/cfg/default.cfg
@@ -1,6 +1,6 @@
 [main]
 #Seed: What we initialize our RNG with. Blank starts randomly
-seed:1213
+seed:
 
 #Sequence Length: number of times to pit each agent against the other
 #l >= 3k (memory) or will be set to 3k
@@ -11,14 +11,14 @@ runs:1
 
 #Oppenent types, either 0 for always last winning or "opponent1.csv" 
 #or whatever the file name is for the custom ai
-opp:opponent1.csv
+opp:0
 #opp:0
 
 [agent]
 #Memory: how sequences back we remember
 #To avoid as much noise as possible, k << l
 #< 4 runs into issues with the opponent
-k:10
+k:4
 
 #Maximum: Tree Depth
 #Should be > 4
@@ -36,11 +36,11 @@ payoff:.8,1,0,0,0.8,1,1,0,0.8
 #Parsimony pressure coefficent
 #( maxdepth - agent->d )* ppcoeff, if depth > d.
 #  This amount is subtracted from the fitness
-ppcoeff:0.01
+ppcoeff:0.05
 
 [gen]
 #mu, pop size
-mu:500
+mu:1000
 #lambda, offspring per gen
 lamb:50
 
@@ -56,7 +56,7 @@ type:1
 
 [mutation]
 #Mutation rate chance
-chance:0.01
+chance:0.05
 
 [survivalselection]
 #Type of selection
@@ -74,7 +74,7 @@ k:20
 type:0
 
 #Number of fit evals per run
-fitevals:2000
+fitevals:10000
 
 #number of generations without avg fitness improvement
 j:30
