Fixed point deduction in 2b that was caused by an overselection mistake.

--- a/cfg/default.cfg
+++ b/cfg/default.cfg
@@ -54,6 +54,9 @@ method:halfandhalf
 #1 => Over-selection
 type:0
 
+#Over selection percent (decimal)
+c:0.32
+
 [mutation]
 #Mutation rate chance
 chance:0.05
