--- a/cfg/default.cfg
+++ b/cfg/default.cfg
@@ -40,9 +40,9 @@ ppcoeff:0.05
 
 [gen]
 #mu, pop size
-mu:1000
+mu:500
 #lambda, offspring per gen
-lamb:50
+lamb:500
 
 [init]
 #Method, either grown, halfandhalf or full
@@ -70,6 +70,11 @@ type:0
 #k-tournament size
 k:20
 
+#Survival Strategy
+#0 => COMMA
+#1 => PLUS
+strat:1
+
 [terminate]
 #Termination Type
 #0 => # of Fit Evals
@@ -77,7 +82,7 @@ k:20
 type:0
 
 #Number of fit evals per run
-fitevals:10000
+fitevals:2000
 
 #number of generations without avg fitness improvement
 j:10
