--- a/cfg/default.cfg
+++ b/cfg/default.cfg
@@ -9,11 +9,6 @@ l:30
 #Runs: Number of times we run our EA
 runs:1
 
-#Oppenent types, either 0 for always last winning or "opponent1.csv" 
-#or whatever the file name is for the custom ai
-opp:0
-#opp:0
-
 [agent]
 #Memory: how sequences back we remember
 #To avoid as much noise as possible, k << l
@@ -23,6 +18,9 @@ k:4
 #Maximum: Tree Depth
 #Should be > 4
 d:7
+
+#Coevolutionary Fitness Sampling Percentage
+coevfsp:.1
 
 #Payoff matrix. This is tauritz's table from left to right, top to bottom
 #scissors => s
