Change to lookup.

--- a/cfg/default.cfg
+++ b/cfg/default.cfg
@@ -1,6 +1,6 @@
 [main]
 #Seed: What we initialize our RNG with. Blank starts randomly
-seed:
+seed:1587192843
 
 #Sequence Length: number of times to pit each agent against the other
 #l >= 3k (memory) or will be set to 3k
