Revert "Cleared out the old AI's for fitness evaluation."
This reverts commit 322014f5f11550dc114315c1866b156e7b5036d8.

Conflicts:
	cfg/default.cfg
	lib/agent.py
	lib/gen.py
	lib/util.py

--- a/cfg/default.cfg
+++ b/cfg/default.cfg
@@ -9,6 +9,11 @@ l:30
 #Runs: Number of times we run our EA
 runs:1
 
+#Oppenent types, either 0 for always last winning or "opponent1.csv" 
+#or whatever the file name is for the custom ai
+opp:0
+#opp:0
+
 [agent]
 #Memory: how sequences back we remember
 #To avoid as much noise as possible, k << l
@@ -21,6 +26,9 @@ d:7
 
 #Coevolutionary Fitness Sampling Percentage
 coevfsp:.05
+
+#opponent csv name
+csv:opponent1.csv
 
 #Payoff matrix. This is tauritz's table from left to right, top to bottom
 #scissors => s
