Changed log names in test configs.

--- a/cfg/regular-test-plus.cfg
+++ b/cfg/regular-test-plus.cfg
@@ -95,8 +95,8 @@ j:10
 #  %cm => commit
 #  %cfg => config file name
 #Log filename, relative or absolute
-result:logs/result-log.txt
+result:logs/res-reg-plus-log.txt
 #Where we pump out the solution
-solution:logs/solution-log.txt
+solution:logs/sol-reg-plus-log.txt
 #Log headers, do we try to query git (1) or not (0)?
 logh:1
