Added a CSV file, currently empty. (cherry picking)
Conflicts:
	lib/log.py

--- a/cfg/default.cfg
+++ b/cfg/default.cfg
@@ -96,5 +96,8 @@ j:10
 result:logs/result-log.txt
 #Where we pump out the solution
 solution:logs/solution-log.txt
+#CSV filename with data for graphs
+csv:logs/result.csv
+
 #Log headers, do we try to query git (1) or not (0)?
 logh:1
