Minor compilation fixes.

--- a/cfg/default.cfg
+++ b/cfg/default.cfg
@@ -9,10 +9,8 @@ l:30
 #Runs: Number of times we run our EA
 runs:1
 
-#Oppenent types, either 0 for always last winning or "opponent1.csv" 
-#or whatever the file name is for the custom ai
-opp:0
-#opp:0
+#Path to CSV opponent
+opp:opponent1.csv
 
 [agent]
 #Memory: how sequences back we remember
