Added more configs and changed a few things to allow similar to a2b running but with random gp out.

--- a/cfg/deceptive-def-lastwin.cfg
+++ b/cfg/deceptive-def-lastwin.cfg
@@ -10,7 +10,7 @@ l:30
 runs:30
 
 #Path to CSV opponent
-opp:opponent1.csv
+opp:0
 
 [agent]
 #Memory: how sequences back we remember
@@ -29,7 +29,7 @@ d:7
 #Normalized to [0,1], -3 => 0, 1 => .8, 2 => 1
 #opponentplayer => res value
 #rr,rp,rs,pr,pp,ps,sr,sp,ss
-payoff:.5,1,0,0,0.5,1,1,0,0.5
+payoff:.8,1,0,0,0.8,1,1,0,0.8
 
 #Parsimony pressure coefficent
 #( maxdepth - agent->d )* ppcoeff, if depth > d.
@@ -91,11 +91,11 @@ j:10
 #  %cm => commit
 #  %cfg => config file name
 #Log filename, relative or absolute
-result:logs/as2b-reg-csv-result-log.txt
+result:logs/as2b-dec-lw-result-log.txt
 #Where we pump out the solution
-solution:logs/as2b-reg-csv-solution-log.txt
+solution:logs/as2b-dec-lw-solution-log.txt
 #CSV filename with data for graphs
-csv:logs/as2b-reg-csv-result.csv
+csv:logs/as2b-dec-lw-result.csv
 
 #Log headers, do we try to query git (1) or not (0)?
 logh:1
