--- a/cfg/deceptive-def.cfg
+++ b/cfg/deceptive-def.cfg
@@ -91,11 +91,11 @@ j:10
 #  %cm => commit
 #  %cfg => config file name
 #Log filename, relative or absolute
-result:logs/as2b-dec-result-log.txt
+result:logs/as2b-dec-csv-result-log.txt
 #Where we pump out the solution
-solution:logs/as2b-dec-solution-log.txt
+solution:logs/as2b-dec-csv-solution-log.txt
 #CSV filename with data for graphs
-csv:logs/as2b-dec-result.csv
+csv:logs/as2b-dec-csv-result.csv
 
 #Log headers, do we try to query git (1) or not (0)?
 logh:1
