--- a/cfg/default.cfg
+++ b/cfg/default.cfg
@@ -9,7 +9,7 @@ l:30
 #Runs: Number of times we run our EA
 runs:1
 
-#Path to CSV opponent
+#Path to CSV opponent, if CSV, "0" otherwise
 opp:opponent1.csv
 
 [agent]
