--- a/cfg/regular-def-lastwin.cfg
+++ b/cfg/regular-def-lastwin.cfg
@@ -10,7 +10,7 @@ l:30
 runs:30
 
 #Path to CSV opponent
-opp:opponent1.csv
+opp:0
 
 [agent]
 #Memory: how sequences back we remember
@@ -91,11 +91,11 @@ j:10
 #  %cm => commit
 #  %cfg => config file name
 #Log filename, relative or absolute
-result:logs/as2b-reg-csv-result-log.txt
+result:logs/as2b-reg-lw-result-log.txt
 #Where we pump out the solution
-solution:logs/as2b-reg-csv-solution-log.txt
+solution:logs/as2b-lw-csv-solution-log.txt
 #CSV filename with data for graphs
-csv:logs/as2b-reg-csv-result.csv
+csv:logs/as2b-reg-lw-result.csv
 
 #Log headers, do we try to query git (1) or not (0)?
 logh:1
