--- a/cfg/regular-def.cfg
+++ b/cfg/regular-def.cfg
@@ -31,10 +31,13 @@ payoff:.5,1,0,0,0.5,1,1,0,0.5
 #Parsimony pressure coefficent
 #( maxdepth - agent->d )* ppcoeff, if depth > d.
 #  This amount is subtracted from the fitness
-ppcoeff:0.025
+ppcoeff:0.01
 
 #Path to CSV opponent
 csv:opponent1.csv
+
+#Coevolutionary Fitness Sampling Percentage
+coevfsp:.025
 
 [gen]
 #mu, pop size
