--- a/cfg/deceptive-def.cfg
+++ b/cfg/deceptive-def.cfg
@@ -13,7 +13,7 @@ runs:30
 #Memory: how sequences back we remember
 #To avoid as much noise as possible, k << l
 #< 4 runs into issues with the opponent
-k:5
+k:4
 
 #Maximum: Tree Depth
 #Should be > 4
@@ -98,7 +98,7 @@ result:logs/as2c-dec-result-log.txt
 #Where we pump out the solution
 solution:logs/as2c-dec-solution-log.txt
 #CSV filename with data for graphs
-csv:logs/as2c-reg-result.csv
+csv:logs/as2c-dec-result.csv
 
 #Log headers, do we try to query git (1) or not (0)?
 logh:1
